Preventing emoji from dimming & darkening dark mode shadows

--- a/css/core.css
+++ b/css/core.css
@@ -232,8 +232,8 @@
      * ------------------
      */
 
-    --shadow: 0em 1em 2.75em rgba(0, 0, 0, 0.1), 0em 0.22em 0.6em rgba(0, 0, 0, 0.05);
-    --hover-shadow: 0em 2em 3.5em rgba(0, 0, 0, 0.35), 0em 0.45em 0.85em rgba(0, 0, 0, 0.2);
+    --shadow: 0em 1em 2.75em rgba(0, 0, 0, 0.25), 0em 0.22em 0.6em rgba(0, 0, 0, 0.15);
+    --hover-shadow: 0em 2em 3.5em rgba(0, 0, 0, 0.35), 0em 0.45em 0.85em rgba(0, 0, 0, 0.25);
     --clicking-shadow: 0em 0.5em 2.2em rgba(0, 0, 0, 0.35), 0em 0.11em 0.36em rgba(0, 0, 0, 0.2);
     --admonition-shadow: 0em 1em 2.75em hsla(var(--accent-hue), var(--widget-saturation), 60%, 0.1), 0em 0.22em 0.6em hsla(var(--accent-hue), var(--widget-saturation), 60%, 0.05);
 
@@ -2628,6 +2628,13 @@ img.emoji {
     border-radius: 0;
     vertical-align: text-top;
 }
+    /**
+     * Disable dark mode dimming for emoji
+     */
+    #dark img.emoji,
+    #dark img.memoji {
+        filter: brightness(1);
+    }
 /**
  * For emoji used as if they were list-style-type (commonly used in the Music Player Showcases)
  */
